[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ci_connector_ops"
version = "0.2.1"
description = "Packaged maintained by the connector operations team to perform CI for connectors"
authors = ["Airbyte <contact@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
PyYAML = "^6.0"
GitPython = "^3.1.29"
pydantic = "^1.9"
PyGithub = "^1.58.0"
rich = "^11.0.1"
pydash = "^7.0.4"
google-cloud-storage = "^2.8.0"
ci-credentials = {path = "../ci_credentials"}

[tool.poetry.group.dev.dependencies]
pyinstrument = "*"

[tool.poetry.group.pipelines.dependencies]
dagger-io = "^0.6.2"
asyncer = "^0.0.2"
anyio = "^3.4.1"
more-itertools = "^8.11.0"
docker = "^5.0.3"
requests = "^2.28.2"
semver = "^2.13.0"
airbyte-protocol-models = "*"
tabulate = "^0.8.9"
jinja2 = "^3.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.10.0"
freezegun = "^1.1.0"

[tool.poetry.scripts]
check-test-strictness-level = "ci_connector_ops.acceptance_test_config_checks:check_test_strictness_level"
write-review-requirements-file = "ci_connector_ops.acceptance_test_config_checks:write_review_requirements_file"
print-mandatory-reviewers = "ci_connector_ops.acceptance_test_config_checks:print_mandatory_reviewers"
allowed-hosts-checks = "ci_connector_ops.allowed_hosts_checks:check_allowed_hosts"
run-qa-checks = "ci_connector_ops.qa_checks:run_qa_checks"
airbyte-ci = "ci_connector_ops.pipelines.commands.airbyte_ci:airbyte_ci"
