[tool.poetry]
name = "airbyte-connectors-base-images"
version = "1.0.4"
description = "This package is used to generate and publish the base images for Airbyte Connectors."
authors = ["Augustin Lafanechere <augustin@airbyte.io>"]
readme = "README.md"
packages = [{ include = "base_images" }]
include = ["generated"]
[tool.poetry.dependencies]
python = "^3.10"
dagger-io = "==0.13.3"
beartype = ">=0.18.2"
gitpython = "^3.1.35"
rich = "^13.5.2"
semver = "^3.0.1"
connector-ops = { path = "../connector_ops", develop = true }
inquirer = "^3.1.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
vulture = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-docs = "base_images.commands:generate_docs"
generate-release = "base_images.commands:generate_release"
publish = "base_images.commands:publish_existing_version"

[tool.poe.tasks]
test = "pytest tests"

[tool.airbyte_ci]
python_versions = ["3.10"]
optional_poetry_groups = ["dev"]
poe_tasks = ["test"]
mount_docker_socket = true
