[tool.poetry]
name = "airbyte-java-cdk-aircmd"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [{include = "cdk"}]

[tool.poetry.dependencies]
python = "^3.11"
# To work with and edit aircmd locally, 
# comment the following line and uncomment out the 
# path to local ../aircmd folder
# you'll need to rerun poetry install to update the dependency
aircmd = {git = "https://github.com/airbytehq/aircmd.git", branch = "main", rev="1b804386a51a9c5c20dc7c866708a5a7a28c35aa"} 
#aircmd = {path = "../../../../aircmd", develop = true}

[tool.mypy]
strict = "true"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
mypy = "^1.3.0"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff]
# ignore line length violations for now
ignore = ["E501"]


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."aircmd.plugins"]
cdk = "cdk.ci:cdk_plugin"

