#
# Copyright (c) 2022 Airbyte, Inc., all rights reserved.
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "code_validator"
version = "0.1.0"
description = "Load and extract CI secrets for test suites"
authors = ["Airbyte <contact@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
common_utils = {path = "../common_utils"}
unidiff = "^0.6.0"
mdutils = "^1.3.1"
mypy = "^0.930"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^6.2.5"
black = "^21.10b0"
lxml = "^4.6.3"
isort = "^5.10.1"

[tool.poetry.scripts]
ci_sonar_qube = "ci_sonar_qube.main:main"
ci_changes_detection = "ci_changes_detection.main:main"
