#
# Copyright (c) 2023 Airbyte, Inc., all rights reserved.
#

[tool.poetry]
name = "ci_credentials"
version = "1.1.0"
description = "CLI tooling to read and manage GSM secrets"
authors = ["Airbyte <contact@airbyte.io>"]
readme = "README.md"
packages = [{ include = "ci_credentials" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
click = "^8.1.3"
pyyaml = "^6.0"

# Toggle between these two in order to test 'common_utils' changes locally:

common_utils = { git = "https://github.com/airbytehq/airbyte.git", subdirectory = "airbyte-ci/connectors/common_utils" }
# common_utils = { path = "../common_utils", develop = true }

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.10.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ci_credentials = "ci_credentials.main:ci_credentials"

[tool.poe.tasks]
test = "pytest tests"

[tool.airbyte_ci]
extra_poetry_groups = ["dev"]
poe_tasks = ["test"]
