#
# Copyright (c) 2023 Airbyte, Inc., all rights reserved.
#

[tool.poetry]
name = "ci_credentials"
version = "1.2.1"
description = "CLI tooling to read and manage GSM secrets"
authors = ["Airbyte <contact@airbyte.io>"]
readme = "README.md"
packages = [{ include = "ci_credentials" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
cryptography = ">=42.0"
click = "^8.1.3"
pyyaml = "^6.0"
pyjwt = "2.8.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.10.0"
pytest = "^8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ci_credentials = "ci_credentials.main:ci_credentials"

[tool.poe.tasks]
test = "pytest tests --config-file=./pyproject.toml"

[tool.airbyte_ci]
python_versions = ["3.10"]
optional_poetry_groups = ["dev"]
poe_tasks = ["test"]
