#
# Copyright (c) 2023 Airbyte, Inc., all rights reserved.
#

[tool.poetry]
name = "common_utils"
version = "0.0.0"
description = "Suite of all often used classes and common functions"
authors = ["Airbyte <contact@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
requests-mock = "^1.9.3"
pytest = "^8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest tests"

[tool.airbyte_ci]
python_versions = ["3.10"]
optional_poetry_groups = ["dev"]
# Disable poe tasks as tests are not passing ATM
poe_tasks = []
