[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "connector_ops"
version = "0.2.1"
description = "Packaged maintained by the connector operations team to perform CI for connectors"
authors = ["Airbyte <contact@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
PyYAML = "^6.0"
GitPython = "^3.1.29"
pydantic = "^1.9"
PyGithub = "^1.58.0"
rich = "^11.0.1"
pydash = "^7.0.4"
google-cloud-storage = "^2.8.0"
ci-credentials = {path = "../ci_credentials"}

[tool.poetry.group.dev.dependencies]
pyinstrument = "^0.24.4"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.10.0"
freezegun = "^1.1.0"

[tool.poetry.scripts]
check-test-strictness-level = "connector_ops.acceptance_test_config_checks:check_test_strictness_level"
write-review-requirements-file = "connector_ops.acceptance_test_config_checks:write_review_requirements_file"
print-mandatory-reviewers = "connector_ops.acceptance_test_config_checks:print_mandatory_reviewers"
allowed-hosts-checks = "connector_ops.allowed_hosts_checks:check_allowed_hosts"
run-qa-checks = "connector_ops.qa_checks:run_qa_checks"
