[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "connector_ops"
version = "0.9.0"
description = "Packaged maintained by the connector operations team to perform CI for connectors"
authors = ["Airbyte <contact@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.31"
PyYAML = "^6.0"
GitPython = "^3.1.29"
pydantic = "^1.9"
PyGithub = "^2"
rich = "^13.0.0"
pydash = "^6.0.2"
google-cloud-storage = "^2.8.0"
ci-credentials = {path = "../ci_credentials"}
pandas = "^2.0.3"
simpleeval = "^0.9.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-mock = "^3.10.0"
freezegun = "^1.1.0"

[tool.poetry.scripts]
write-review-requirements-file = "connector_ops.required_reviewer_checks:write_review_requirements_file"
print-mandatory-reviewers = "connector_ops.required_reviewer_checks:print_mandatory_reviewers"

[tool.poe.tasks]
test = "pytest tests"

[tool.airbyte_ci]
python_versions = ["3.10"]
optional_poetry_groups = ["dev"]
poe_tasks = ["test"]
