[tool.poetry]
name = "connectors-qa"
version = "1.10.2"
description = "A package to run QA checks on Airbyte connectors, generate reports and documentation."
authors = ["Airbyte <contact@airbyte.io>"]
readme = "README.md"
packages = [{ include = "connectors_qa", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
airbyte-connectors-base-images = { path = "../base_images", develop = false }
connector-ops = { path = "../connector_ops", develop = false }
metadata-service = { path = "../metadata_service/lib", develop = false }
pydash = "^6.0.2"
jinja2 = "^3.1.3"
toml = "^0.10.2"
asyncclick = "^8.1.7.1"
asyncer = "^0.0.4"

[tool.poetry.scripts]
connectors-qa = "connectors_qa.cli:connectors_qa"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
types-toml = "^0.10.8.7"
pytest-asyncio = "^0.23.5"
gitpython = "^3.1.42"


[tool.poe.tasks]
test = "pytest tests"
type_check = "mypy src --disallow-untyped-defs"
lint = "ruff check src"

[tool.airbyte_ci]
python_versions = ["3.10"]
optional_poetry_groups = ["dev"]
poe_tasks = ["type_check", "test"]

[tool.ruff]
target-version = "py310"
line-length = 140
