[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "erd"
version = "0.1.0"
description = "Contains utilities for generating ERDs."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
homepage = "https://github.com/airbytehq/airbyte"
readme = "README.md"
packages = [
    { include = "erd", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
airbyte-cdk = "*"
click = "^8.1.3"
dpath = "^2.1.6"
google-generativeai = "^0.7.2"
markdown-it-py = ">=2.2.0"
pydbml = "^1.1.0"
pytest = "^8.1.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.20240311"

[tool.ruff.lint]
select = ["I", "F"]

[tool.ruff.lint.isort]
known-first-party = ["connection-retriever"]

[tool.poe.tasks]
test = "pytest tests"
type_check = "mypy src --disallow-untyped-defs"
pre-push = []

[tool.poetry.scripts]
erd = "erd.cli:main"

[tool.airbyte_ci]
python_versions = ["3.10"]
poe_tasks = ["type_check", "test"]
