[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "live-tests"
version = "0.2.0"
description = "Contains utilities for testing connectors against live data."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
homepage = "https://github.com/airbytehq/airbyte"
readme = "README.md"
packages = [
    { include = "live_tests", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
airbyte-protocol-models = "<1.0.0"
cachetools = "~=5.3.3"
dagger-io = "==0.9.6"
pydantic = "*"
pytest-asyncio = "~=0.23.5"
pydash = "~=7.0.7"
docker = ">=6,<7"
asyncclick = "^8.1.7.1"

[tool.poetry.scripts]
live-tests = "live_tests.cli:live_tests"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
types-cachetools = "^5.3.0.7"

[tool.poe.tasks]
test = "pytest tests"
lint = "ruff check src"
format = "ruff format src"
type_check = "mypy src --disallow-untyped-defs"
pre-push = ["format", "lint", "test", "type_check"]

[tool.airbyte_ci]
poe_tasks = ["test", "lint", "type_check"]
