[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "live-tests"
version = "0.21.0"
description = "Contains utilities for testing connectors against live data."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
homepage = "https://github.com/airbytehq/airbyte"
readme = "README.md"
packages = [
    { include = "live_tests", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
airbyte-cdk = "*"
airbyte-protocol-models = "<1.0.0"
cachetools = "~=5.3.3"
dagger-io = "==0.13.3"
decorator = ">=5.1.1"
deepdiff = "6.7.1"
jsonschema = "*"
pydantic = "*"
pytest-asyncio = "~=0.23.5"
pytest = "^8.1.1"
pydash = "~=7.0.7"
docker = ">=6,<7"
asyncclick = "^8.1.7.1"
connection-retriever = {git = "git@github.com:airbytehq/airbyte-platform-internal", subdirectory = "tools/connection-retriever"}
duckdb = "<=0.10.1"  # Pinned due to this issue https://github.com/duckdb/duckdb/issues/11152
pandas = "^2.2.1"
pytest-sugar = "^1.0.0"
asyncer = "^0.0.5"
rich = "^13.7.1"
mitmproxy = "^10.2.4"
requests = "<=2.31.1"  # Pinned due to this issue https://github.com/docker/docker-py/issues/3256#issuecomment-2127688011
pyyaml = "~=6.0.1"
dpath = "^2.1.6"
genson = "^1.2.2"
segment-analytics-python = "^2.3.2"
python-slugify = ">=8.0.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
mypy = "^1.8.0"
types-cachetools = "^5.3.0.7"
pandas-stubs = "^2.2.0.240218"
types-requests = "^2.31.0.20240311"
types-pyyaml = "^6.0.12.20240311"

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["I", "F"]

[tool.ruff.lint.isort]
known-first-party = ["connection-retriever"]

[tool.poe.tasks]
test = "pytest tests"
type_check = "mypy src --disallow-untyped-defs"
pre-push = []

[tool.airbyte_ci]
python_versions = ["3.11"]
optional_poetry_groups = ["dev"]
poe_tasks = []
required_environment_variables = ["DOCKER_HUB_USERNAME", "DOCKER_HUB_PASSWORD"]
