[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pipelines"
version = "4.15.4"
description = "Packaged maintained by the connector operations team to perform CI for connectors' pipelines"
authors = ["Airbyte <contact@airbyte.io>"]

[tool.poetry.dependencies]
python = "~3.10"
dagger-io = "==0.9.6"
beartype = "<0.17.2" # dagger 0.9.6 doesn't pin this but doesn't play well with it. We should probably upgrade dagger
asyncer = "^0.0.2"
anyio = "^3.4.1"
more-itertools = "^8.11.0"
docker = "^7"
semver = "^3"
airbyte-protocol-models = "*"
jinja2 = "^3.0.2"
requests = "^2.31"
airbyte-connectors-base-images = {path = "../base_images", develop = true}
connector-ops = {path = "../connector_ops", develop = true}
toml = "^0.10.2"
types-requests = "^2.31"
sentry-sdk = "^1.28.1"
segment-analytics-python = "^2.2.3"
pygit2 = "^1.13.1"
asyncclick = "^8.1.3.4"
certifi = ">=2024"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
dpath = "^2.1.6"
xmltodict = "^0.13.0"
ruamel-yaml = "^0.18.6"
google-cloud-secret-manager = "^2.20.0"
google-auth = "^2.29.0"
pygithub = "^2.3.0"
pydash = "6.0.2"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pytest-cov = "^4.1.0"
pyinstaller = "^6.1.0"
poethepoet = "^0.24.2"
pytest = "^8"
pytest-mock = "^3.10.0"
mypy = "^1.9"
ruff = "^0.1.9"
types-toml = "^0.10.8"
types-requests = "^2.31"
types-xmltodict = "^0.13.0"

[tool.poetry.scripts]
airbyte-ci = "pipelines.cli.airbyte_ci:airbyte_ci"
airbyte-ci-dev = "pipelines.cli.airbyte_ci:airbyte_ci"



[tool.poe.tasks.build-release-binary]
shell = "pyinstaller --additional-hooks-dir=pyinstaller_hooks --collect-all pipelines --collect-all beartype --collect-all dagger --hidden-import strawberry --name $ARTIFACT_NAME --onefile pipelines/cli/airbyte_ci.py"
args = [{name = "ARTIFACT_NAME", default="airbyte-ci", positional = true}]

[tool.poe.tasks]
test = "pytest tests -m 'not flaky'"
type_check = "mypy pipelines --disallow-untyped-defs"
lint = "ruff check pipelines"

[tool.airbyte_ci]
optional_poetry_groups = ["dev"]
poe_tasks = ["type_check", "test"]
mount_docker_socket = true
