[tool.poetry]
name = "qa-engine"
version = "0.2.2"
description = "Connector QA Engine for Airbyte"
authors = ["Airbyte <contact@airbyte.io>"]
readme = "README.md"
packages = [{include = "qa_engine"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
click = "~8.1.3"
requests = "*"
PyYAML = "~6.0"
GitPython = "~3.1.29"
pydantic = "~1.9"
PyGithub = "~1.58.0"
rich = "*"
pandas = "~1.5.3"
pandas-gbq = "~0.19.0"
fsspec = "~2023.1.0"
gcsfs = "~2023.1.0"
pytablewriter = "~0.64.2"
pydash = "^6.0.2"
ruamel-yaml = "^0.17.30"

[tool.poetry.group.dev.dependencies]
pyinstrument = "*"

[tool.poetry.group.test.dependencies]
pytest = "~6.2.5"
pytest-mock = "~3.10.0"
freezegun = "*"

[tool.poetry.scripts]
run-qa-engine = "qa_engine.main:main"
