[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "connector-acceptance-test"
version = "3.7.0"
description = "Contains acceptance tests for connectors."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
homepage = "https://github.com/airbytehq/airbyte"

[tool.poetry.dependencies]
python = "^3.10"
airbyte-protocol-models = "<1.0.0"
dagger-io = "==0.9.6"
beartype = "<0.17.2" # dagger 0.9.6 doesn't pin this but doesn't play well with it. We should probably upgrade dagger
PyYAML = "~=6.0"
icdiff = "~=1.9"
inflection = "~=0.5"
pdbpp = "~=0.10"
pydantic = "*"
pytest = "~=6.2"
pytest-sugar = "~=0.9"
pytest-timeout = "~=1.4"
pprintpp = "~=0.4"
dpath = "~=2.0.1"
jsonschema = "*"
jsonref = "==0.2"
deepdiff = "~=5.8.0"
requests-mock = "~=1.9.3"
pytest-mock = "~=3.6.1"
pendulum = "*"
pytest-cov = "~=3.0.0"
hypothesis = "*"
hypothesis-jsonschema = "*"
anyio = "^3.4.1"
docker = ">=6,<7"
# Pinning requests and urllib3 to avoid an issue with dockerpy and requests 2.
# Related issue: https://github.com/docker/docker-py/issues/3113
urllib3 = "<2.0"
requests = "^2.31"
pytest-xdist = "^3.3.1"

[tool.poe.tasks]
test = "pytest unit_tests"
ci = ["test"]

[tool.airbyte_ci]
poe_tasks = ["test"]
mount_docker_socket = true
